Fixed the bug of alignment of h1 anhor tag (ending tag)

--- a/styles/style.css
+++ b/styles/style.css
@@ -466,7 +466,7 @@ button:hover {
     font-size: 1.3rem;
     position: relative;
     top: 60px;
-    left: -37px;
+    left: -97px;
 }
 .subtitle {
     color: #8D8D8D;
